--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "phpunit/phpunit": "8.3.4",
+    "phpunit/phpunit": "^7.5.14 || ^8.0",
     "squizlabs/php_codesniffer": "^3.4"
   },
   "autoload": {
