--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
       "email": "joris.ros@gmail.com"
     }
   ],
-  "require": {
+  "require-dev": {
     "phpunit/phpunit": "^7.5.14 || ^8.0",
-    "squizlabs/php_codesniffer": "^3.4"
+    "squizlabs/php_codesniffer": "^3.4",
+    "phpro/grumphp": "^0.16.1"
   },
   "autoload": {
     "psr-4": {
